--- a/app/src/main/res/layout/cookbook_edit_fragment.xml
+++ b/app/src/main/res/layout/cookbook_edit_fragment.xml
@@ -2,14 +2,14 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/details_coordinator_layout"
+    android:id="@+id/edit_coordinator_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
     tools:context=".ui.CookbookEditFragment">
 
     <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/details_app_bar"
+        android:id="@+id/edit_app_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
@@ -17,10 +17,10 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.core.widget.NestedScrollView
-        android:id="@+id/details_nested"
+        android:id="@+id/edit_nested"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_anchor="@+id/details_nested"
+        app:layout_anchor="@+id/edit_nested"
         app:layout_anchorGravity="center"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
@@ -61,22 +61,12 @@
                 app:layout_constraintTop_toBottomOf="@id/edit_content_container" />
 
             <Button
-                android:id="@+id/edit_reorder_ingredient_button"
-                style="@style/AppButton"
-                android:text="@string/reorder_button_text"
-                app:icon="@drawable/ic_reorder_24px"
-                app:layout_constraintTop_toTopOf="@id/edit_ingredient_label"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="@id/edit_ingredient_label" />
-
-            <Button
                 android:id="@+id/edit_add_ingredient_button"
                 style="@style/AppButton"
                 android:text="@string/add_button_text"
                 app:icon="@drawable/ic_add_24px"
                 app:layout_constraintTop_toTopOf="@id/edit_ingredient_label"
-                app:layout_constraintEnd_toStartOf="@id/edit_reorder_ingredient_button"
-                app:layout_constraintStart_toEndOf="@id/edit_ingredient_label"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="@id/edit_ingredient_label" />
 
             <androidx.fragment.app.FragmentContainerView
@@ -95,22 +85,12 @@
                 app:layout_constraintTop_toBottomOf="@id/edit_ingredient_list_container" />
 
             <Button
-                android:id="@+id/edit_reorder_step_button"
-                style="@style/AppButton"
-                android:text="@string/reorder_button_text"
-                app:icon="@drawable/ic_reorder_24px"
-                app:layout_constraintTop_toTopOf="@id/edit_step_label"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="@id/edit_step_label" />
-
-            <Button
                 android:id="@+id/edit_add_step_button"
                 style="@style/AppButton"
                 android:text="@string/add_button_text"
                 app:icon="@drawable/ic_add_24px"
                 app:layout_constraintTop_toTopOf="@id/edit_step_label"
-                app:layout_constraintEnd_toStartOf="@id/edit_reorder_step_button"
-                app:layout_constraintStart_toEndOf="@id/edit_step_label"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="@id/edit_step_label" />
 
             <androidx.fragment.app.FragmentContainerView
@@ -147,7 +127,7 @@
             <TextView
                 android:id="@+id/edit_keyword_label"
                 style="@style/HeadingTextView"
-                android:text="@string/images"
+                android:text="@string/keywords"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/edit_image_list_container" />
 
@@ -164,6 +144,7 @@
                 android:id="@+id/edit_keyword_list_container"
                 style="@style/AppFragmentContainer"
                 android:layout_width="match_parent"
+                android:layout_marginBottom="@dimen/text_margin"
                 app:layout_constraintTop_toBottomOf="@id/edit_keyword_label"
                 tools:context="com.larsonapps.personalcookbook.KeywordFragment" />
 
