--- a/app/src/main/res/layout/image_fragment_item.xml
+++ b/app/src/main/res/layout/image_fragment_item.xml
@@ -8,6 +8,7 @@
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/image_margin"
         android:contentDescription="@string/recipe_content_description" />
 
     <com.google.android.material.imageview.ShapeableImageView
