--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -58,6 +58,15 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="ContentHeadingTextView">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textAppearance">@style/TextAppearance.MaterialComponents.Body1</item>
+        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:layout_marginStart">@dimen/text_margin_start</item>
+        <item name="android:layout_marginEnd">@dimen/text_margin</item>
+    </style>
+
     <style name="HeadingTextView">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -79,6 +88,7 @@
     <style name="AppFragmentContainer">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginBottom">@dimen/fragment_bottom_margin</item>
+        <item name="android:layout_marginTop">@dimen/fragment_top_margin</item>
     </style>
 
 </resources>
