--- a/app/src/main/res/layout/cookbook_edit_fragment.xml
+++ b/app/src/main/res/layout/cookbook_edit_fragment.xml
@@ -109,9 +109,19 @@
                 app:layout_constraintTop_toBottomOf="@id/edit_step_list_container" />
 
             <Button
-                android:id="@+id/edit_add_image_button"
+                android:id="@+id/edit_add_image_gallery_button"
                 style="@style/AppButton"
-                android:text="@string/add_button_text"
+                android:text="@string/add_gallery"
+                app:icon="@drawable/ic_add_24px"
+                app:layout_constraintTop_toTopOf="@id/edit_image_label"
+                app:layout_constraintStart_toEndOf="@id/edit_image_label"
+                app:layout_constraintEnd_toStartOf="@id/edit_add_image_internet_button"
+                app:layout_constraintBottom_toBottomOf="@id/edit_image_label" />
+
+            <Button
+                android:id="@+id/edit_add_image_internet_button"
+                style="@style/AppButton"
+                android:text="@string/add_internet"
                 app:icon="@drawable/ic_add_24px"
                 app:layout_constraintTop_toTopOf="@id/edit_image_label"
                 app:layout_constraintEnd_toEndOf="parent"
