--- a/app/src/main/res/layout/edit_content_fragment.xml
+++ b/app/src/main/res/layout/edit_content_fragment.xml
@@ -29,7 +29,7 @@
         android:hint="@string/edit_content_short_description_hint"
         android:imeOptions="actionDone"
         android:importantForAutofill="no"
-        android:inputType="textCapWords"
+        android:inputType="textCapSentences"
         android:textColor="@color/white"
         android:textColorHint="@color/white" />
 
@@ -154,7 +154,7 @@
         android:hint="@string/edit_content_description_hint"
         android:imeOptions="actionDone"
         android:importantForAutofill="no"
-        android:inputType="textCapWords"
+        android:inputType="textCapSentences"
         android:textColor="@color/white"
         android:textColorHint="@color/white" />
 
@@ -168,7 +168,7 @@
         android:hint="@string/edit_content_notes_hint"
         android:imeOptions="actionDone"
         android:importantForAutofill="no"
-        android:inputType="textCapWords"
+        android:inputType="textCapSentences"
         android:textColor="@color/white"
         android:textColorHint="@color/white" />
 
@@ -182,7 +182,7 @@
         android:hint="@string/edit_content_copyright_hint"
         android:imeOptions="actionDone"
         android:importantForAutofill="no"
-        android:inputType="textCapWords"
+        android:inputType="textCapSentences"
         android:textColor="@color/white"
         android:textColorHint="@color/white" />
 
