--- a/app/src/main/res/layout/ingredient_fragment_item.xml
+++ b/app/src/main/res/layout/ingredient_fragment_item.xml
@@ -2,37 +2,43 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:baselineAligned="false"
+    android:orientation="horizontal">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="7"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/ingredient_amount_text_view"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/list_horizontal_text_margin"
-            android:layout_marginTop="@dimen/list_top_text_margin"
-            android:textColor="@color/white" />
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/ingredient_measure_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingStart="@dimen/list_text_padding"
-            android:paddingEnd="@dimen/list_text_padding"
-            android:layout_marginTop="@dimen/list_top_text_margin"
-            android:textColor="@color/white" />
+            <TextView
+                android:id="@+id/ingredient_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/list_horizontal_text_margin"
+                android:layout_marginTop="@dimen/list_top_text_margin"
+                android:textColor="@color/white" />
 
-        <TextView
-            android:id="@+id/ingredient_name_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/list_top_text_margin"
-            android:layout_marginEnd="@dimen/list_horizontal_text_margin"
-            android:textColor="@color/white" />
+            <TextView
+                android:id="@+id/ingredient_preparation_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/list_horizontal_text_margin"
+                android:layout_marginEnd="@dimen/list_horizontal_text_margin"
+                android:textColor="@color/white" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="2"
+        android:orientation="horizontal">
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/ingredient_edit_image_button"
@@ -52,12 +58,4 @@
             android:padding="@dimen/edit_icon_padding"
             android:src="@drawable/ic_delete_24px" />
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/ingredient_preparation_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/list_horizontal_text_margin"
-        android:layout_marginEnd="@dimen/list_horizontal_text_margin"
-        android:textColor="@color/white" />
 </LinearLayout>
