Removed Cook's notes from RecipeEntity.java into CookNoteEntity.java
created and added cook notes in a recyclerview in:
CookbookDetailsFragment.java
CookbookEditFragment.java
CookbookManualFragment.java
created EditCookNoteDialogFragment.java to enable add, update and delete capabilities

--- a/app/src/main/res/layout/content_fragment.xml
+++ b/app/src/main/res/layout/content_fragment.xml
@@ -113,18 +113,18 @@
 
         <TextView
             style="@style/ContentHeadingTextView"
-            android:text="@string/content_notes"/>
-
-        <TextView
-            android:id="@+id/notes_text_view"
-            style="@style/ContentTextView" />
-
-        <TextView
-            style="@style/ContentHeadingTextView"
             android:text="@string/content_copyright" />
 
         <TextView
             android:id="@+id/copyright_text_view"
+            style="@style/ContentTextView" />
+
+        <TextView
+            style="@style/ContentHeadingTextView"
+            android:text="@string/personal_note_text" />
+
+        <TextView
+            android:id="@+id/personal_note_text_view"
             style="@style/ContentTextView" />
 
     </LinearLayout>
