--- a/app/src/main/res/layout/step_fragment_item.xml
+++ b/app/src/main/res/layout/step_fragment_item.xml
@@ -1,35 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/step_text_view"
-        android:layout_width="0dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="7"
-        android:layout_marginStart="@dimen/list_horizontal_text_margin"
-        android:layout_marginTop="@dimen/list_top_text_margin"
-        android:textColor="@color/white"/>
+        android:orientation="horizontal">
 
-    <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/step_edit_image_button"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:padding="@dimen/edit_icon_padding"
-        android:layout_margin="@dimen/edit_icon_margin"
-        android:background="@drawable/button_selector"
-        android:src="@drawable/ic_edit_24px" />
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="7"
+            android:orientation="vertical">
 
-    <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/step_delete_image_button"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:padding="@dimen/edit_icon_padding"
-        android:layout_margin="@dimen/edit_icon_margin"
-        android:background="@drawable/button_selector"
-        android:src="@drawable/ic_delete_24px" />
+            <TextView
+                android:id="@+id/step_text_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/list_horizontal_text_margin"
+                android:layout_marginTop="@dimen/list_top_text_margin"
+                android:textColor="@color/white" />
+
+            <TextView
+                android:id="@+id/step_personal_note_text_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/list_horizontal_text_margin"
+                android:layout_marginTop="@dimen/list_top_text_margin"
+                android:textColor="@color/white" />
+
+        </LinearLayout>
+
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/step_edit_image_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/edit_icon_margin"
+            android:layout_weight="1"
+            android:background="@drawable/button_selector"
+            android:padding="@dimen/edit_icon_padding"
+            android:src="@drawable/ic_edit_24px" />
+
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/step_delete_image_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/edit_icon_margin"
+            android:layout_weight="1"
+            android:background="@drawable/button_selector"
+            android:padding="@dimen/edit_icon_padding"
+            android:src="@drawable/ic_delete_24px" />
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="@dimen/list_divider_margin"
+        android:layout_marginBottom="@dimen/list_divider_margin"
+        android:background="@color/black" />
 </LinearLayout>
