--- a/app/src/main/res/layout/cook_note_fragment_item.xml
+++ b/app/src/main/res/layout/cook_note_fragment_item.xml
@@ -16,34 +16,17 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/ingredient_text_view"
-                android:layout_width="wrap_content"
+                android:id="@+id/cook_note_text_view"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/list_horizontal_text_margin"
                 android:layout_marginTop="@dimen/list_top_text_margin"
-                android:layout_marginEnd="@dimen/list_horizontal_text_margin"
-                android:textColor="@color/white" />
-
-            <TextView
-                android:id="@+id/ingredient_preparation_text_view"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/list_horizontal_text_margin"
-                android:layout_marginEnd="@dimen/list_horizontal_text_margin"
-                android:textColor="@color/white" />
-
-            <TextView
-                android:id="@+id/ingredient_personal_note_text_view"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/list_horizontal_text_margin"
-                android:layout_marginEnd="@dimen/list_horizontal_text_margin"
                 android:textColor="@color/white" />
 
         </LinearLayout>
 
         <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/ingredient_edit_image_button"
+            android:id="@+id/cook_note_edit_image_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/edit_icon_margin"
@@ -53,7 +36,7 @@
             android:src="@drawable/ic_edit_24px" />
 
         <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/ingredient_delete_image_button"
+            android:id="@+id/cook_note_delete_image_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/edit_icon_margin"
@@ -61,7 +44,6 @@
             android:background="@drawable/button_selector"
             android:padding="@dimen/edit_icon_padding"
             android:src="@drawable/ic_delete_24px" />
-
     </LinearLayout>
 
     <View
