--- a/app/src/main/res/layout/edit_ingredient_fragment.xml
+++ b/app/src/main/res/layout/edit_ingredient_fragment.xml
@@ -56,7 +56,21 @@
         android:hint="@string/edit_ingredient_preparation_hint"
         android:imeOptions="actionDone"
         android:importantForAutofill="no"
-        android:inputType="textCapWords"
+        android:inputType="textCapSentences"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white" />
+
+    <EditText
+        android:id="@+id/edit_ingredient_personal_note_edit_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/dialog_margin"
+        android:layout_marginEnd="@dimen/dialog_margin"
+        android:layout_marginBottom="@dimen/dialog_vertical_margin"
+        android:hint="@string/personal_note_hint"
+        android:imeOptions="actionDone"
+        android:importantForAutofill="no"
+        android:inputType="textCapSentences"
         android:textColor="@color/white"
         android:textColorHint="@color/white" />
 
