--- a/app/src/main/res/layout/recipe_fragment_item_list.xml
+++ b/app/src/main/res/layout/recipe_fragment_item_list.xml
@@ -84,7 +84,7 @@
     </androidx.core.widget.NestedScrollView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/share_fab"
+        android:id="@+id/search_fab"
         android:layout_width="@dimen/fab_size"
         android:layout_height="@dimen/fab_size"
         android:layout_gravity="bottom|end"
