Fixed issues with edit texts added category delete functionality
created:
category_fragment_item.xml
category_fragment_item_list.xml
CategoryFragment.java
CategoryRecyclerViewAdapter.java

--- a/app/src/main/res/layout/cookbook_about_fragment.xml
+++ b/app/src/main/res/layout/cookbook_about_fragment.xml
@@ -1,14 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@color/colorPrimaryDark"
     tools:context=".ui.CookbookAboutFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        style="@style/HeadingTextView"
+        android:text="@string/about_introduction" />
 
-</FrameLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="@dimen/list_divider_margin"
+        android:layout_marginBottom="@dimen/list_divider_margin"
+        android:background="@color/black" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="@style/HeadingTextView"
+        android:text="@string/about_instructions_opening_screen_label" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="@style/AboutTextView"
+        android:text="@string/about_instructions_opening_screen_text_2" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="@style/AboutTextView"
+        android:text="@string/about_instructions_opening_screen_text_3" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="@style/AboutTextView"
+        android:text="@string/about_instructions_opening_screen_text_4" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="@style/AboutTextView"
+        android:text="@string/about_instructions_opening_screen_text_5" />
+
+<!--    <TextView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        style="@style/AboutTextView"-->
+<!--        android:text="@string/about_instructions_opening_screen_text_6" />-->
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="@dimen/list_divider_margin"
+        android:layout_marginBottom="@dimen/list_divider_margin"
+        android:background="@color/black" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="@style/HeadingTextView"
+        android:text="@string/about_copyright" />
+
+</LinearLayout>
