--- a/app/src/main/res/layout/edit_cook_note_fragment.xml
+++ b/app/src/main/res/layout/edit_cook_note_fragment.xml
@@ -29,7 +29,7 @@
         android:hint="@string/edit_cook_note_edit_text_hint"
         android:imeOptions="actionDone"
         android:importantForAutofill="no"
-        android:inputType="textCapSentences"
+        android:inputType="textCapSentences|textMultiLine|textAutoCorrect"
         android:textColor="@color/white"
         android:textColorHint="@color/white" />
 
