--- a/app/src/main/res/layout/edit_ingredient_fragment.xml
+++ b/app/src/main/res/layout/edit_ingredient_fragment.xml
@@ -14,7 +14,7 @@
         android:hint="@string/edit_ingredient_name_hint"
         android:imeOptions="actionDone"
         android:importantForAutofill="no"
-        android:inputType="textCapWords"
+        android:inputType="textCapWords|textAutoCorrect|textMultiLine"
         android:textColor="@color/white"
         android:textColorHint="@color/white" />
 
@@ -56,7 +56,7 @@
         android:hint="@string/edit_ingredient_preparation_hint"
         android:imeOptions="actionDone"
         android:importantForAutofill="no"
-        android:inputType="textCapSentences"
+        android:inputType="textCapSentences|textMultiLine|textAutoCorrect"
         android:textColor="@color/white"
         android:textColorHint="@color/white" />
 
@@ -70,7 +70,7 @@
         android:hint="@string/personal_note_hint"
         android:imeOptions="actionDone"
         android:importantForAutofill="no"
-        android:inputType="textCapSentences"
+        android:inputType="textCapSentences|textMultiLine|textAutoCorrect"
         android:textColor="@color/white"
         android:textColorHint="@color/white" />
 
