--- a/app/src/main/res/layout/edit_step_fragment.xml
+++ b/app/src/main/res/layout/edit_step_fragment.xml
@@ -29,7 +29,7 @@
         android:hint="@string/edit_step_instruction_hint"
         android:imeOptions="actionDone"
         android:importantForAutofill="no"
-        android:inputType="textCapSentences"
+        android:inputType="textCapSentences|textAutoCorrect|textMultiLine"
         android:textColor="@color/white"
         android:textColorHint="@color/white" />
 
@@ -43,7 +43,7 @@
         android:hint="@string/personal_note_hint"
         android:imeOptions="actionDone"
         android:importantForAutofill="no"
-        android:inputType="textCapSentences"
+        android:inputType="textCapSentences|textAutoCorrect|textMultiLine"
         android:textColor="@color/white"
         android:textColorHint="@color/white" />
 
