--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,15 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_add_category"
         android:enabled="true"
-        android:orderInCategory="1"
+        android:orderInCategory="2"
         android:title="@string/add_category_menu_title" />
     <item
         android:id="@+id/action_manual"
         android:enabled="true"
-        android:orderInCategory="2"
+        android:orderInCategory="1"
+        app:showAsAction="ifRoom"
         android:title="@string/manual_entry_menu_title" />
+
+    <item
+        android:id="@+id/action_delete_category"
+        android:enabled="true"
+        android:orderInCategory="3"
+        android:title="@string/menu_action_delete_categories_title" />
 
     <item
         android:id="@+id/action_about"
